added delete all function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="container">
       <div id="schedule" class="container"></div>
       <div class="row justify-content-center my-2">
-        <button type="button" class="col-6 btn btn-outline-danger p-2 font-weight-bold">Delete All</button>
+        <button type="button" id="delete-all" class="col-6 btn btn-outline-danger p-2 font-weight-bold">Delete All</button>
       </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
